fix truncated filter items [tri-1490]

--- a/src/app/shared/components/filter-item/filter-item.component.scss
+++ b/src/app/shared/components/filter-item/filter-item.component.scss
@@ -1,3 +1,7 @@
+:host ::ng-deep .mat-mdc-checkbox .mat-internal-form-field {
+  align-items: flex-start;
+}
+
 .form-control label {
   color: var(--color-text-tertiary);
   font-size: var(--font-size-small);
